--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dex",
-  "version": "0.1.1",
+  "name": "astro-clans",
+  "version": "0.1.0",
   "type": "module",
   "private": true,
   "dependencies": {
