--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "petra-plugin-wallet-adapter": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
