UI: Change favicon and meta descriptions

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Staking App",
-  "name": "Aptos Token Staking Example",
+  "short_name": "Astro Clans",
+  "name": "Astro Clans Example",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
